# cPhysics

./: CMakeLists.txt  LICENSE  gitignore  main.c  readme.md
doc/: Entity.md  Field.md  Formulas.md  Movement.md
include/: collider.h  constant.h  cphysics.h  entity.h  error_codes.h  field.h  movement.h  plog.h  time_flow.h
include/basic_obj/: cube.h  cylinder.h  pyramid.h  sphere.h
include/core/: entity.h  field.h  movement.h  time_flow.h
include/graphics/: camera.h
include/mathlib/: Vector.h
src/: collider.c  cube.c  cylinder.c  entity.c  field.c  movement.c  plog.c  pyramid.c  sphere.c  time_flow.c
src/core/: collider.c  entity.c  field.c  movement.c  time_flow.c
src/graphics/: camera.c
src/mathlib/: Vector.c
